Fix MathJax warning visibility and wrap math expressions

--- a/_sass/breakpoints/_mobileup.scss
+++ b/_sass/breakpoints/_mobileup.scss
@@ -975,7 +975,7 @@ img.right {
     visibility: hidden;
   }
 
-  &.mathjax-ready .math {
+  body.mathjax-ready & .math {
     visibility: visible;
   }
 
